[package]
name = "rbf_project"
version = "0.1.0"
authors = ["Vochescu Alexandru <alexvochescu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = "0.0.10"
combine = "2.5"
libc = "0.2"
time = "0.1"
# rbpf = { git = "https://github.com/qmonnet/rbpf" }
rbpf = { path = "../rbpf" }
arrayref = "0.3.6"

[dev-dependencies]
json = "0.11"
